--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,11 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "itsgoingd/clockwork": "^5.1",
         "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5"
+        "laravel/sanctum": "^2.14",
+        "laravel/tinker": "^2.5",
+        "realrashid/sweet-alert": "^7.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
